[package]
name = "rust-imagelib-actix"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = false
lto = true
panic = "abort"
opt-level = 3
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = "*"
image = "*"

[dependencies.rust-imagelib]
path = "./rust-imagelib"
features = ["serde"]
